<resources>
    <string name="app_name">Java PRO</string>
    <string name="author">Adrian Jurek</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_quiz">Quiz Java</string>
    <string name="menu_slideviewer">Slide Viewer</string>
    <string name="menu_codeviewer">Code Viewer</string>
    <string name="menu_webtools">Web Tools</string>

    <string name="quiz_question_number">Pytanie %d z %d</string>
    <string name="quiz_send">Wyślij</string>
    <string name="quiz_ended">Quiz zakończony</string>
    <string name="quiz_result">Wynik: %d/%d</string>

    <string name="slide_viewer_prev"><![CDATA[<]]></string>
    <string name="slide_viewer_number">%d/%d</string>
    <string name="slide_viewer_next"><![CDATA[>]]></string>

    <string name="server_connection_error">Nie udało się połączyć z serwerem</string>
</resources>