<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_quiz_selection"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_slide_viewer_selection"
            android:title="@string/menu_slideviewer" />
        <item
            android:id="@+id/nav_code_viewer"
            android:title="@string/menu_codeviewer" />
        <item
            android:id="@+id/nav_web_tools_selection"
            android:title="@string/menu_webtools" />
    </group>
</menu>