<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pl.adrian99.javaproandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_code_viewer"
        android:name="pl.adrian99.javaproandroid.ui.codeviewer.CodeViewerFragment"
        android:label="@string/menu_codeviewer"
        tools:layout="@layout/fragment_code_viewer" />
    <fragment
        android:id="@+id/nav_web_tools_selection"
        android:name="pl.adrian99.javaproandroid.ui.webtools.WebToolsSelectionFragment"
        android:label="@string/menu_webtools"
        tools:layout="@layout/fragment_web_tools_selection" >
        <action
            android:id="@+id/action_nav_web_tools_selection_to_nav_web_tools"
            app:destination="@id/nav_web_tools" />
    </fragment>
    <fragment
        android:id="@+id/nav_quiz_selection"
        android:name="pl.adrian99.javaproandroid.ui.quiz.QuizSelectionFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz_selection" >
        <action
            android:id="@+id/action_nav_quiz_selection_to_quizFragment"
            app:destination="@id/nav_quiz" />
    </fragment>
    <fragment
        android:id="@+id/nav_quiz"
        android:name="pl.adrian99.javaproandroid.ui.quiz.QuizFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz">
        <argument
            android:name="quizCategoryId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/nav_web_tools"
        android:name="pl.adrian99.javaproandroid.ui.webtools.WebToolsFragment"
        android:label="@string/menu_webtools"
        tools:layout="@layout/fragment_web_tools" >
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_slide_viewer_selection"
        android:name="pl.adrian99.javaproandroid.ui.slideviewer.SlideViewerSelectionFragment"
        android:label="@string/menu_slideviewer"
        tools:layout="@layout/fragment_slide_viewer_selection">
        <action
            android:id="@+id/action_nav_slide_viewer_selection_to_nav_slide_viewer2"
            app:destination="@id/nav_slide_viewer" />
    </fragment>
    <fragment
        android:id="@+id/nav_slide_viewer"
        android:name="pl.adrian99.javaproandroid.ui.slideviewer.SlideViewerFragment"
        android:label="@string/menu_slideviewer"
        tools:layout="@layout/fragment_slideviewer">
        <argument
            android:name="categoryId"
            app:argType="long" />
    </fragment>

</navigation>